--- a/App - Android/app/src/main/res/layout/activity_main.xml
+++ b/App - Android/app/src/main/res/layout/activity_main.xml
@@ -52,13 +52,14 @@
             android:layout_marginTop="50dp"
             android:gravity="center"
             android:text="Preencha abaixo para prosseguir"
+            android:padding="5dp"
             android:textSize="15dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -71,6 +72,7 @@
                 android:text="Username:" />
 
             <EditText
+                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -96,6 +98,7 @@
                 android:text="Password:" />
 
             <EditText
+                android:id="@+id/password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -105,46 +108,13 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:gravity="center">
-
-                <RadioButton
-                    android:id="@+id/button_professor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Professor"/>
-
-                <RadioButton
-                    android:id="@+id/button_aluno"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Aluno"/>
-
-
-            </RadioGroup>
-
-
-        </LinearLayout>
-
 
         <Button
             android:id="@+id/button_entrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="55dp"
             android:background="@drawable/bg_btn"
             android:text="Entrar"
             android:textColor="@color/white" />
