--- a/App - Android/app/src/main/res/layout/activity_professor.xml
+++ b/App - Android/app/src/main/res/layout/activity_professor.xml
@@ -91,13 +91,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button_3"
+            android:id="@+id/frequencia"
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="15dp"
             android:layout_marginVertical="20dp"
             android:background="@drawable/bg_btn"
-            android:text="Ativar Roteador de Frequência"
+            android:text="Frequência"
             android:textColor="@color/white" />
 
         <Button
