--- a/App - Professor/app/src/main/res/layout/activity_frequencia_host.xml
+++ b/App - Professor/app/src/main/res/layout/activity_frequencia_host.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:orientation="vertical"
-    tools:context=".FrequenciaHost">
+    tools:context=".activities.FrequenciaHost">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -161,6 +161,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_btn_2"
             android:id="@+id/lista_pareados"
+            android:padding="10dp"
             android:gravity="center"
             android:text="0 Dispositivos Pareados"
             android:textColor="@color/white"
