DEU CERTO ENVIAR NOVOS USRURARIOS PARA O FIREBASE

--- a/App - Misto/app/src/main/res/layout/activity_aluno_bancodados.xml
+++ b/App - Misto/app/src/main/res/layout/activity_aluno_bancodados.xml
@@ -70,6 +70,7 @@
             android:layout_marginTop="20dp"
             android:text="Banco de dados" />
         <Button
+            android:id="@+id/Cadastrobancoofical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
