--- a/App - Professor/app/src/main/res/layout/activity_cadeiras.xml
+++ b/App - Professor/app/src/main/res/layout/activity_cadeiras.xml
@@ -74,6 +74,7 @@
         <ListView
             android:id="@+id/listView"
             android:background="@drawable/bg_whitebox"
+            android:foregroundGravity="center"
             android:layout_margin="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
