--- a/App - Professor/app/src/main/res/layout/activity_frequencia_host.xml
+++ b/App - Professor/app/src/main/res/layout/activity_frequencia_host.xml
@@ -175,14 +175,17 @@
         android:gravity="center"
         android:layout_gravity="center">
 
+
         <Button
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Listagem da Frequência"
             android:textColor="#B41C2C4C"
             android:background="@drawable/bg_btn"
-            android:layout_marginTop="160dp"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="80dp"
             android:id="@+id/listagem"/>
+
 
     </LinearLayout>
 
