--- a/App - Professor/app/src/main/res/layout/activity_listagem.xml
+++ b/App - Professor/app/src/main/res/layout/activity_listagem.xml
@@ -53,6 +53,17 @@
         android:background="@drawable/bg_whitebox"
         android:padding="10sp"
         android:layout_marginHorizontal="30dp"/>
+    <Spinner
+        android:id="@+id/options_spinnerPeriodo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginVertical="5dp"
+        android:textAlignment="center"
+        android:background="@drawable/bg_whitebox"
+        android:padding="10sp"
+        android:layout_marginHorizontal="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
