--- a/App - Professor/app/src/main/res/layout/activity_main.xml
+++ b/App - Professor/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Username:" />
+                android:text="Email:" />
 
             <EditText
                 android:id="@+id/username"
@@ -102,6 +102,7 @@
 
             <EditText
                 android:id="@+id/password"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/white"
